--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,6 +2,18 @@
 
 {% block content %}
     <h1>Hi, {{ current_user.username }}!</h1>
+    <form action="" method="post">
+        {{ form.hidden_tag() }}
+        <p>
+            {{ form.project.label }}<br>
+            {{ form.project(cols=32, rows=4) }}<br>
+            {% for error in form.project.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </p>
+        <p>{{ form.submit() }}</p>
+    </form>
+    
     {% for project in projects %}
     <div><p>{{ project.creator.username }} says: <b>{{ project.desc }}</b></p></div>
     {% endfor %}
