things currently not good

--- a/app/templates/_project.html
+++ b/app/templates/_project.html
@@ -2,6 +2,6 @@
 <table>
     <tr valign="top">
         <td><img src="{{ project.creator.avatar(36) }}"></td>
-        <td>{{ project.creator.username }} says:<br>{{ project.desc }}</td>
+        <td>{{ project.creator.username }} says:<br>{{ project.descr }}</td>
     </tr>
 </table>
