--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,12 @@
             {% for error in form.name.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
+
+            {{ form.category.label }}<br>            <!-- input label --> 
+            {{ form.category(cols=32, rows=4) }}<br>  <!-- user input --> 
+            {% for error in form.category.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
             
             {{ form.descr.label }}<br>            
             {{ form.descr(cols=32, rows=4) }}<br> 
