--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
         {% else %}
             <title>CollabFinder</title>
         {% endif %}
+        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div>
