--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
-
 {% block content %}
+<p>HELLO</p>
     <h1>Hi, {{ current_user.username }}!</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }} <!-- PROJECT CREATION FORM -->
@@ -10,7 +10,7 @@
             {% for error in form.name.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
-
+            
             {{ form.category.label }}<br>            <!-- input label --> 
             {{ form.category(cols=32, rows=4) }}<br>  <!-- user input --> 
             {% for error in form.category.errors %}
@@ -22,11 +22,37 @@
             {% for error in form.descr.errors %}
             <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
+
+            <div id = "learning" style="margin:0 auto; display:none;">
+                {{ form.learning_category.label }}<br>            
+                {{ form.learning_category(cols=32, rows=4) }}<br> 
+                {% for error in form.learning_category.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </div>
+                
+
         </p>
         <p>{{ form.submit() }}</p>
     </form>
     
     {% for project in projects %}
-    <div><p>{{ project.creator.username }} says: <b>{{ project.descr }}</b></p></div>
+    <div><p>{{ project.creator.username }} says: <b>{{ project.name }}</b></p></div>
     {% endfor %}
+    
+<script type="text/javascript">
+    $(document).ready(function() {
+        $("#category").change(function () { 
+            var val = $(this).val();
+            if (val == "learning") {
+                console.log('SAAAAAAAAAAAAAB')
+                $("#learning").show();
+            }
+            else {
+                $("#learning").hide(); 
+            }
+            });     
+    });
+</script>
 {% endblock %}
+    
