--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -70,35 +70,17 @@
     // Show and hide category specific form fields
     $(document).ready(function() {
         $("#category").change(function () { // detecting change in category drop down
-            let cat_list  = ['learning', 'software']; 
+            let cat_map  = {'learning':'learning', 'software development':'software'}; //{form value:div id, ...}
             var val = $(this).val();
-            for (i = 0; i < cat_list.length; i++) {
-                if (val == cat_list[i]) {
-                    $('#' + cat_list[i]).show();
-                    for (c = 0; c < cat_list.length; c++) {
-                        if (val != cat_list[c]) {
-                            $('#' + cat_list[c]).hide();
-                        }
-                    }
-                }
-            }
-            
-            // if (val == "software development") {
-            //     $("#software").show();
-            //     $("#learning").hide(); 
+            var div_ids = $.map(cat_map, function(value, key) { return value });
 
-            //     //hide other category forms?
-            // }
-            // else if (val == "learning"){
-            //     $("#learning").show(); 
-            //     $("#software").hide(); 
-            // }
-            // else {
-            //     $("#learning").hide(); 
-            //     $("#software").hide();
-            // }
+            for (i in div_ids) {
+                if (div_ids[i] == cat_map[val]) { 
+                    $("#"+div_ids[i]).show("slow");
+                }
+                else {$("#"+div_ids[i]).hide("slow");}
+                }
             }); 
-            
         });     
 
 </script>
