--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,10 @@
         {% endif %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        
+        {{ moment.include_moment() }} <!-- generates a <script> tag (this may not work without flask-bootstrap) -->
+        {{ moment.include_moment() }}
+        {{ moment.lang(g.locale) }}
         <style>
              form {
                 position: absolute; 
@@ -35,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('explore') }}">Explore</a>
+                  <a class="nav-link" href="{{ url_for('explore') }}">{{ _('Explore') }}</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -52,10 +56,10 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_anonymous %}
-                <li><a href="{{ url_for('login') }}">Login</a></li>
+                <li><a href="{{ url_for('login') }}">{{ _('Login') }}</a></li>
                 {% else %}
-                <li><a href="{{ url_for('user', username=current_user.username) }}">Profile &nbsp; </a></li> <!-- fix spacing -->
-                <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                <li><a href="{{ url_for('user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
+                <li><a href="{{ url_for('logout') }}">{{ _('Logout') }}</a></li>
                 {% endif %}
             </ul>
             </div>
@@ -90,3 +94,4 @@
         </div>
     </body>
 </html>
+
