--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Hi, {{ current_user.username }}!</h1>
+<!-- <h1>Hi, {{ current_user.username }}!</h1> -->
+<h1>{{ _('Hi, %(username)s!', username=current_user.username) }}</h1>
 
 {% if form %}
 <form action="" method="post">
@@ -76,12 +77,12 @@
         <ul class="pager">
             <li class="previous{% if not prev_url %} disabled{% endif %}">
                 <a href="{{ prev_url or '#' }}">
-                    <span aria-hidden="true">&larr;</span> Newer projects
+                    <span aria-hidden="true">&larr;</span> {{ _('Newer projects') }}
                 </a>
             </li>
             <li class="next{% if not next_url %} disabled{% endif %}">
                 <a href="{{ next_url or '#' }}">
-                    Older projects <span aria-hidden="true">&rarr;</span>
+                    {{ _('Older projects') }} <span aria-hidden="true">&rarr;</span>
                 </a>
             </li>
         </ul>
