--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -5,25 +5,25 @@
         <tr valign="top">
             <td><img src="{{ user.avatar(128) }}"></td>
             <td>
-                <h1>User: {{ user.username }}</h1>
+                <h1>{{ _('User') }}: {{ user.username }}</h1>
                 {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
                 <!-- would want to see who followers/following are -->
-                <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+                <p>{{ _('%(count)d followers', count=user.followers.count()) }}, {{ _('%(count)d following', count=user.followed.count()) }}</p>
                 {% if user == current_user %}
-                    <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+                    <p><a href="{{ url_for('edit_profile') }}">{{ _('Edit your profile') }}</a></p>
                 {% elif not current_user.is_following(user) %}
                 <!-- follow/unfollow buttons -->
                 <p>
                     <form action="{{ url_for('follow', username=user.username) }}" method="post">
                         {{ form.hidden_tag() }}
-                        {{ form.submit(value='Follow') }}
+                        {{ form.submit(value=_('Follow'), class_='btn btn-default') }}
                     </form>
                 </p>
                 {% else %}
                 <p>
                     <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
                         {{ form.hidden_tag() }}
-                        {{ form.submit(value='Unfollow') }}
+                        {{ form.submit(value=_('Unfollow'), class_='btn btn-default') }}
                     </form>
                 </p>
                 {% endif %}
@@ -39,9 +39,14 @@
     {% endfor %}
 
     {% if prev_url %}
-    <a href="{{ prev_url }}">Newer projects</a>
+    <a href="{{ prev_url }}">{{ _('Newer projects') }}</a>
     {% endif %}
     {% if next_url %}
-        <a href="{{ next_url }}">Older projects</a>
+        <a href="{{ next_url }}">{{ _('Older projects') }}</a>
     {% endif %}
+    
+    {% if user.last_seen %}
+    <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
+    {% endif %}
+    
 {% endblock %}
