--- a/app/templates/_project.html
+++ b/app/templates/_project.html
@@ -2,16 +2,16 @@
 <table class="table table-hover">
     <tr>
         <td width="70px">
-            <a href="{{ url_for('user', username=project.creator.username) }}">
+            <a href="{{ url_for('main.user', username=project.creator.username) }}">
                 <img src="{{ project.creator.avatar(70) }}" />
             </a>
         </td>
         <td>
-            <a href="{{ url_for('user', username=project.creator.username) }}">
+            <a href="{{ url_for('main.user', username=project.creator.username) }}">
                 {{ project.creator.username }}
             </a>
             {{ _('%(username)s created a project: %(when)s',
-                    username=user_link, when=moment(post.timestamp).fromNow()) }}
+                    username=user_link, when=moment(project.timestamp).fromNow()) }}
             {{ project.name }}<br>
             {{ project.descr }}
         </td>
@@ -23,7 +23,7 @@
     <tr valign="top">
         <td><img src="{{ project.creator.avatar(36) }}"></td>
         <td>
-            <a href="{{ url_for('user', username=project.creator.username) }}">
+            <a href="{{ url_for('main.user', username=project.creator.username) }}">
                 {{ project.creator.username }}
             </a>
             created a project:<br>
