--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -29,9 +29,9 @@
         </style>
     </head>
     <body>
-        {% block navbar %}
+        <!-- {% block navbar %} -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('index') }}">CollabFinder</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">CollabFinder</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -39,7 +39,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                  <a class="nav-link" href="{{ url_for('explore') }}">{{ _('Explore') }}</a>
+                  <a class="nav-link" href="{{ url_for('main.explore') }}">{{ _('Explore') }}</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -56,28 +56,15 @@
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_anonymous %}
-                <li><a href="{{ url_for('login') }}">{{ _('Login') }}</a></li>
+                <li><a href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
                 {% else %}
-                <li><a href="{{ url_for('user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
-                <li><a href="{{ url_for('logout') }}">{{ _('Logout') }}</a></li>
+                <li><a href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
+                <li><a href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
                 {% endif %}
             </ul>
             </div>
           </nav>
-        {% endblock %}
-          
-        
-        <!-- <div>
-            CollabFinder:
-            <a href="{{ url_for('index') }}">Home</a>
-            {% if current_user.is_anonymous %}
-                <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-                <a href="{{ url_for('explore') }}">Explore</a>
-                <a href="{{ url_for('user', username=current_user.username) }}">Profile</a>
-                <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
-        </div> -->
+        <!-- {% endblock %} -->
         
         <hr>
         <div class="container">
