--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,7 @@
         {{ moment.include_moment() }}
         {{ moment.lang(g.locale) }}
         <style>
-             form {
+             form.proj {
                 position: absolute; 
                 left: 50%;
                 margin-left: -100px;
@@ -52,16 +52,27 @@
                     <a class="dropdown-item" href="#">Something else here</a>
                   </div>
                 </li>
-                
+              
+                  
               </ul>
               <ul class="nav navbar-nav navbar-right">
+                {% if g.search_form %}
+                  <form class="navbar-form" method="get"
+                          action="{{ url_for('main.search') }}">
+                      <div class="form-group">
+                          {{ g.search_form.q(size=20, class='form-control',
+                              placeholder=g.search_form.q.label.text) }}
+                      </div>
+                  </form>
+                  {% endif %}
+                
                 {% if current_user.is_anonymous %}
                 <li><a href="{{ url_for('auth.login') }}">{{ _('Login') }}</a></li>
                 {% else %}
                 <li><a href="{{ url_for('main.user', username=current_user.username) }}">{{ _('Profile') }} &nbsp; </a></li> <!-- fix spacing -->
                 <li><a href="{{ url_for('auth.logout') }}">{{ _('Logout') }}</a></li>
                 {% endif %}
-            </ul>
+              </ul>
             </div>
           </nav>
         <!-- {% endblock %} -->
