project creation page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,7 +12,16 @@
         {{ moment.include_moment() }}
         {{ moment.lang(g.locale) }}
         <style>
-             form.proj {
+             .fpage_div {
+              /* this is where the project search and creation button are */
+              background-color: lightblue;
+              text-align: center;
+              width: 300px;
+              height: 250px;
+              border-radius: 25px;
+              margin-top: 30px;
+             }
+             .go_center {
                 position: absolute; 
                 left: 50%;
                 margin-left: -100px;
