--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,6 +35,9 @@
                 margin-left: 0px;
              }
             
+            .no_rad {
+              display: none;
+            }
         </style>
     </head>
     <body>
