--- a/app/templates/create_project.html
+++ b/app/templates/create_project.html
@@ -7,7 +7,7 @@
     <!-- PROJECT CREATION FORM -->
     <p>
         {{ form.name.label }}<br>            <!-- input label --> 
-        {{ form.name(cols=20, rows=2, required='required', oninput="TextCounter(this, {})".format(form.lens['name'])) }}<br>  <!-- user input --> 
+        {{ form.name(cols=30, rows=1, required='required', oninput="TextCounter(this, {})".format(form.lens['name'])) }}<br>  <!-- user input --> 
         {% for error in form.name.errors %}
         <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
@@ -19,29 +19,66 @@
         {% endfor %}
 
         {{ form.setting.label }}<br>           
-        {% for subfield in form.setting %}
-            <tr>
-                <td>{{ subfield(class_="no_rad") }}</td>
-                <td>{{ subfield.label(class_="btn btn-primary") }}</td>
-            </tr>
-        {% endfor %}<br>
+        <div class="btn-group-toggle" data-toggle="buttons">
+            {% for subfield in form.setting %}
+            <!-- <tr> -->
+                <label class="btn btn-primary">
+                {{ subfield}} {{ subfield.label(style="cursor:pointer;") }}
+                </label>
+            <!-- </tr> -->
+            {% endfor %}<br> 
+            {% for error in form.setting.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
 
-        {{ form.skill_level.label }}<br>            
-        {{ form.skill_level(cols=32, rows=4) }}<br> 
-        {% for error in form.skill_level.errors %}
-        <span style="color: red;">[{{ error }}]</span>
-        {% endfor %}
+        {{ form.skill_level.label }}<br>           
+        <div class="btn-group-toggle" data-toggle="buttons">
+            {% for subfield in form.skill_level %}
+            <!-- <tr> -->
+                <label class="btn btn-primary">
+                {{ subfield}} {{ subfield.label(style="cursor:pointer;") }}
+                </label>
+            <!-- </tr> -->
+            {% endfor %}<br> 
+            {% for error in form.skill_level.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
 
         {{ form.descr.label }}<br>            
         {{ form.descr(cols=32, rows=4, required='required') }}<br> 
         {% for error in form.descr.errors %}
         <span style="color: red;">[{{ error }}]</span>
         {% endfor %}
+        
+        {{ form.geo_type.label }}<br>            
+        <div class="btn-group-toggle" data-toggle="buttons">
+            {% for subfield in form.geo_type %}
+            <!-- <tr> -->
+                <label class="btn btn-primary">
+                {{ subfield(id="geo_type",style="z-index:4") }} {{ subfield.label(style="cursor:pointer;") }}
+                </label>
+            <!-- </tr> -->
+            {% endfor %}<br> 
+            {% for error in form.geo_type.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
 
-        <!-- <div id = "geo_loc" style="margin:0 auto; display:none;">
-        
-        </div> -->
-        
+        <div id = "college" style="margin:0 auto; display:none;">
+            {{ form.college.label }}<br>            
+            {{ form.college(cols=32, rows=4) }}<br> 
+            {% for error in form.college.errors %}
+            <span style="color: red;">[{{ error }}]</span>
+            {% endfor %}
+        </div>
+
+        <div id = "high_school" style="margin:0 auto; display:none;">
+            bub
+        </div>
+
+    
         <div id = "learning" style="margin:0 auto; display:none;">
             {{ form.learning_category.label }}<br>            
             {{ form.learning_category(cols=32, rows=4) }}<br> 
@@ -71,11 +108,9 @@
         </div>
 
     </p>
-    <p>{{ form.submit() }}</p>
+    <p>{{ form.submit(class_="btn-lg btn-success") }}</p>
 
-    <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">
-        Single toggle
-      </button>
+
 </form>
 {% endif %} <!-- end of form bool -->
 
@@ -87,27 +122,33 @@
     * instead of manually creating cat_map, could go through div ids and drop down elements and
     * automatically create relationship based on word similarity. */
         $("#category").change(function () { // detecting change in category drop down
-            let cat_map  = {'learning':'learning', 'software development':'software'}; //{form value:div id, ...}
+            let div_map  = {'learning':'learning', 'software development':'software'}; //{form value:div id, ...}
             var val = $(this).val();
-            var div_ids = $.map(cat_map, function(value, key) { return value });
+            var div_ids = $.map(div_map, function(value, key) { return value });
 
             for (i in div_ids) {
-                if (div_ids[i] == cat_map[val]) { 
+                if (div_ids[i] == div_map[val]) { 
                     $("#"+div_ids[i]).show("slow");
                 }
                 else {$("#"+div_ids[i]).hide("slow");}
                 }
-            }); 
+            });
+        $('input[type=radio][id="geo_type"]').change( function () { // detecting change in geo drop down
+            let div_map  = {'College/university':'college','High school':'high_school'}; //{form value:div id, ...}
+            var val = $(this).val();
+            console.log(val)
+            var div_ids = $.map(div_map, function(value, key) { return value });
+            console.log('geo:', div_ids);
+            for (i in div_ids) {
+                if (div_ids[i] == div_map[val]) { 
+                    $("#"+div_ids[i]).show("slow");
+                }
+                else {$("#"+div_ids[i]).hide("slow");}
+                }
+            });    
+            
         });    
-    $('btn-primary').click(
-       
-        function() {
-        $('btn-primary').removeClass('btn-primary').addClass('btn-danger');
-    },
-    function() {
-        $('btn-danger').removeClass('btn-danger').addClass('btn-primary');
-    }
-    );
+
     function TextCounter(field, limit) {
         /* Supposed to be used in TextAreaField */
         var typedChars = $(field).val().length;
