--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,8 +38,8 @@
                 margin-left: 0px;
              }
             
-            .no_rad {
-              display: none;
+            h2 {
+              size: 10 !important;
             }
         </style>
     </head>
