--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>{{ _('Search Results') }}</h1>
     {% for project in projects %}
-        {% include '_project.html' %}
+        {% include '_proj_pvw.html' %}
     {% endfor %}
     <nav aria-label="...">
         <ul class="pager">
