--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -35,7 +35,7 @@
     {% for project in projects %}
         <!-- can have optional code here to display prof pics for each post 
         https://blog.miguelgrinberg.com/post/the-flask-mega-tutorial-part-vi-profile-page-and-avatars -->
-        {% include '_project.html' %}
+        {% include '_proj_pvw.html' %}
     {% endfor %}
 
     {% if prev_url %}
