--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,7 +23,7 @@
 <div class='project_stream' >
 
     {% for project in projects %}
-    {% include '_project.html' %}
+    {% include '_proj_pvw.html' %}
     {% endfor %}
 
     <nav aria-label="..."> <!-- supposed to be greyed out and horizontal -->
