request/inv form

--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -43,12 +43,16 @@
     </div>
 {% endif %}
  
-    {% if current_user.username == proj.creator.username %}
+{% if current_user.username == proj.creator.username %}
     <a href="{{ url_for('main.edit_project', project_id=proj.id) }}" method='post' class="btn btn" style="color:white;background-color:turquoise;"> {{_('edit project details')}} </a>
         <br><br>
-    <a class="btn btn" style="color:white;background-color:purple;"> + {{ _('invite') }} </a>
+    <a href="{{ url_for('main.request_project', project_id=proj.id, kind='invite') }}"  method='post' class="btn btn" style="color:white;background-color:purple;"> + {{ _('invite user') }} </a>
 
+{% elif current_user.can_request(proj) %}
+    <a href="{{ url_for('main.request_project', project_id=proj.id, kind='request') }}"  method='post' class="btn btn" style="color:white;background-color:purple;"> + {{ _('request to join project') }} </a>
 {% endif %}
+
+
 
 
 <script type="text/javascript">
