--- a/app/templates/request_project.html
+++ b/app/templates/request_project.html
@@ -4,7 +4,7 @@
     <h1>{{ _('Project Request') }}</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
-        {% if current_user == proj.creator %}
+        {% if kind == 'invite' and current_user == proj.creator %}
         
             <p>
                 {{ form.u_inv.label }}<br>            <!-- input label --> 
@@ -22,7 +22,7 @@
             </p>
             
             <p>{{ form.submit(value='Send invite', class_="btn-lg btn-success") }}</p>
-        {% elif current_user.can_request(proj) %}
+        {% elif kind == 'request' and current_user.can_request(proj) %}
             <p>
                 <p>Explain : </p><br>            
                 {{ form.msg(cols=32, rows=5, required='required') }}<br> 
