--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -50,6 +50,8 @@
 
 {% elif current_user.can_request(proj) %}
     <a href="{{ url_for('main.request_project', project_id=proj.id, kind='request') }}"  method='post' class="btn btn" style="color:white;background-color:purple;"> + {{ _('request to join project') }} </a>
+{% elif not current_user.can_request(proj) %}
+    <a class="btn btn" style="color:white;background-color:rgb(129, 129, 129);cursor:default;"> + {{ _('Request pending') }} </a>
 {% endif %}
 
 
