--- a/app/templates/project.html
+++ b/app/templates/project.html
@@ -26,7 +26,7 @@
 
 
 <p>{{proj.setting}} setting - for those at {{proj.skill_level}} skill level</p>
-{%if proj.chat_link and current_user.username == proj.creator.username %} <!-- later check if member not creator-->
+{%if proj.chat_link and current_user == proj.creator %} <!-- later check if member not creator-->
     <p>Join the conversation: <a class = "btn btn-info" href="http://{{proj.chat_link}}">{{proj.chat_link}}</a></p>
 {%endif%}
 
@@ -43,7 +43,7 @@
     </div>
 {% endif %}
  
-{% if current_user.username == proj.creator.username %}
+{% if current_user == proj.creator %}
     <a href="{{ url_for('main.edit_project', project_id=proj.id) }}" method='post' class="btn btn" style="color:white;background-color:turquoise;"> {{_('edit project details')}} </a>
         <br><br>
     <a href="{{ url_for('main.request_project', project_id=proj.id, kind='invite') }}"  method='post' class="btn btn" style="color:white;background-color:purple;"> + {{ _('invite user') }} </a>
