--- a/app/templates/_msg.html
+++ b/app/templates/_msg.html
@@ -1,22 +1,75 @@
 <!-- project preview sub-template 
 want table to be entirely clickable -->
+
 <table class="table table-hover">
     <tr>
+        {% if msg.kind == 'request' %}
         <td width="70px">
             <a href="{{ url_for('main.user', username=msg.user.username) }}">
                 <img src="{{ msg.user.avatar(70) }}" />
             </a>
         </td>
-        <td>
-            <a href="{{ url_for('main.user', username=project.creator.username) }}">
-                {{ msg.user.username }}
+        {% elif msg.kind == 'invite' %}
+        <td width="70px">
+            <a href="{{ url_for('main.project', project_id=msg.project_id) }}">
+                <img style='width: 70px', src="{{ url_for('static', filename='img/proj.jpg') }}" />
             </a>
+        </td>
+        {% endif %}
+        <td>
+            {% set proj_link %} <!--Used by both request and invite-->
+                <a href="{{ url_for('main.project', project_id=msg.project_id) }}">
+                    {{ proj_id_map[msg.project_id].name }}
+                </a>
+            {% endset %}
+            
             {% if msg.kind == 'request' %}
-                {{ _('%(username)s created a project: %(when)s',
-                        username=user_link, when=moment(project.timestamp).fromNow()) }}
-                <a href="{{url_for('main.project', project_id=project.id)}}">{{ project.name }}</a><br>
-                {{ project.descr }}
-            {% end if%}
+
+                {% set user_link %}
+                    <a href="{{ url_for('main.user', username=msg.user.username) }}">
+                        {{ msg.user.username }}
+                    </a>
+                {% endset %}
+                {{ _('%(username)s requests to join your project %(proj)s: %(when)s',
+                        username=user_link, proj=proj_link, when=moment(msg.timestamp).fromNow()) }} <br>
+                {{ msg.msg }}
+
+                {% if not proj_id_map[msg.project_id].is_member(msg.user_id) %}
+                <!-- accept button -->
+                <p>
+                    <form action="{{ url_for('main.accept', user_id=msg.user_id, project_id=msg.project_id) }}" method="post">
+                        {{ form.hidden_tag() }}
+                        {{ form.submit(value=_('Accept request'), class_='btn btn-success') }}
+                    </form>
+                </p>
+                {% else %}
+                <p>
+                    <a class="btn btn" style="color:white;background-color:rgb(129, 129, 129);cursor:default;"> {{ _('User joined project.') }} </a>
+                </p>
+                {% endif %}
+
+            {% elif msg.kind == 'invite' %}
+                
+                {{ _('Project %(project)s invited you to join their project: %(when)s',
+                    project=proj_link, when=moment(msg.timestamp).fromNow()) }} <br>
+                {{ msg.msg }}
+
+                {% if not proj_id_map[msg.project_id].is_member(msg.user_id) %}
+                <!-- accept button -->
+                <p>
+                    <form action="{{ url_for('main.accept', user_id=msg.user_id, project_id=msg.project_id) }}" method="post">
+                        {{ form.hidden_tag() }}
+                        {{ form.submit(value=_('Join Project'), class_='btn btn-success') }}
+                    </form>
+                </p>
+                {% else %}
+                <p>      
+                    <a class="btn btn" style="color:white;background-color:rgb(129, 129, 129);cursor:default;"> {{ _('You joined the project.') }} </a>
+                </p>  
+                {% endif %}
+
+            {% endif%}
+
         </td>
     </tr>
 </table>
