--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -1,5 +1,24 @@
 {% extends "base.html" %}
 
-{% block app_content %}
+{% block content %}
     <h1> {{ _('Notifications')}}</h1>
-    
+    {% for msg in messages %}
+        {% include '_msg.html' %}
+    {% endfor %}
+
+    <nav aria-label="..."> <!-- supposed to be greyed out and horizontal -->
+        <ul class="pager">
+            <li class="previous{% if not prev_url %} disabled{% endif %}">
+                <a href="{{ prev_url or '#' }}">
+                    <span aria-hidden="true">&larr;</span> {{ _('Newer messages') }}
+                </a>
+            </li>
+            <li class="next{% if not next_url %} disabled{% endif %}">
+                <a href="{{ next_url or '#' }}">
+                    {{ _('Older messages') }} <span aria-hidden="true">&rarr;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+{% endblock %}
